*** empty log message ***

--- a/lang/ca/help/langedit.html
+++ b/lang/ca/help/langedit.html
@@ -1,10 +1,10 @@
+<P ALIGN=CENTER><B>Edici&oacute; d'idioma</B></P>
 
-<P ALIGN=CENTER><B>Edici&oacute; de llenguatges</B></P>
+<P>Si voleu editar els idiomes en aquesta p&agrave;gina cal que els fitxers puguin ser escrits pel proc&eacute;s del servidor web.</P>
+ 
+<p>Dins d'algunes cadenes observareu <b>$a</b> i <b>$a->something</b>.</p>
 
-<P>Si voleu editar els llenguatges d'aquesta p&agrave;gina cal que els arxius 
-  puguin ser escrits durant el proc&eacute;s del servidor web.
-<p>En algunes cadenes observareu <b>$a</b> i <b>$a->something</b>.</p>
-<p>Representen variables que seran reempla&ccedil;ades per noms o altres paraules 
-  pel propi Moodle.</p>
-<P>Quan nom&eacute;s hi ha una variable s'usa la forma $a. Per&ograve; quan n'hi 
-  ha dues o m&eacute;s aleshores cada variable t&eacute; el seu nom.
+<p>Aix&ograve; s&oacute;n variables que Moodle reempla&ccedil;a amb mots o frases.</p>
+
+<P>Si nom&eacute;s hi ha una variable s'utilitza la forma $a. Quan n'hi 
+  ha dues o m&eacute;s, aleshores cada variable t&eacute; el seu nom.
