--- a/lang/ca/help/mods.html
+++ b/lang/ca/help/mods.html
@@ -1,77 +1,4 @@
+<P ALIGN=CENTER><B> M&ograve;duls d'activitat</B></P>
 
-<P ALIGN=CENTER><B> M&ograve;duls d'activitats</B></P>
-
-<P>Moodle cont&eacute; una &agrave;mplia varietat de m&ograve;duls d'activitats 
-  que es poden utilitzar per bastir qualsevol tipus de curs.</P>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>F&ograve;rums</B></P>
-<UL>
-  <p>Aquesta activitat &eacute;s, potser, la m&eacute;s important perqu&egrave; 
-    &eacute;s on tenen lloc la major part de discussions. Els f&ograve;rums es 
-    poden estructurar de diferents maneres i poden incloure la puntuaci&oacute; 
-    de cada intervenci&oacute; per part dels companys. Es poden veure les intervencions 
-    en diferents formats i s'hi poden adjuntar arxius. Quan els participants se 
-    subscriuen a un f&ograve;rum rebran a la seva b&uacute;stia de correu una 
-    c&ograve;pia de cada intervenci&oacute; nova que s'hi faci. Els mestres poden 
-    imposar la subscripci&oacute; a tots els estudiants si aix&iacute; ho creu 
-    convenient. </p>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Diaris</B></P>
-<UL>
-  <p>Aquest m&ograve;dul &eacute;s una activitat reflectiva molt important. El 
-    professor demana als estudiants que hi reflecteixin un tema particular i cada 
-    estudiant pot editar i polir la seva resposta al llarg del temps. Aquesta 
-    resposta &eacute;s privada i nom&eacute;s la pot veure el professor el qual 
-    pot oferir retroalimentaci&oacute; o una puntuaci&oacute; a cada entrada del 
-    diari. &Eacute;s una bona idea fer una activitat al diari cada setmana.</p>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Recursos</B></P>
-<UL>
-  <P>Els recursos s&oacute;n contingut, s&oacute;n la informaci&oacute; que el 
-    professor vol aportar al curs. Poden consistir en arxius carregats al servidor, 
-    p&agrave;gines editades directament amb Moodle o p&agrave;gines web externes 
-    fetes per formar part d'aquest curs.</P>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Tasques</B></P>
-<UL>
-  <p>Les tasques permeten als professors especificar una feina que exigeix que 
-    els estudiants preparin contingut digital en qualsevol format i el trametin 
-    a trav&eacute;s de la c&agrave;rrega al servidor. Una tasca normal inclou 
-    assaigs, projectes, informes, etc. Aquest m&ograve;dul inclou la possibilitat 
-    de puntuar les feines.</p>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Q&uuml;estionaris</B></P>
-<UL>
-  <p>Aquest m&ograve;dul permet al professor dissenyar i preparar q&uuml;estionaris 
-    que poden ser de respostes m&uacute;ltiples, vertader/fals i de respostes 
-    curtes. Les preguntes es poden desar en una base de dades per categories i 
-    reutilitzar-les en el mateix o en altres cursos. Els q&uuml;estionaris admeten 
-    m&uacute;ltiples intents, cada intent &eacute;s marcat autom&agrave;ticament 
-    i el professor pot triar entre donar ajuda o retroalimentaci&oacute; o mostrar 
-    les respostes correctes. Aquest m&ograve;dul inclou la possibilitat de puntuar 
-    la feina.</p>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Tries</B></P>
-<UL>
-  <p>Una activitat de tria &eacute;s molt simple: el professor fa una pregunta 
-    i especifica diferents possibles respostes Pot ser &uacute;til com a votaci&oacute; 
-    r&agrave;pida de cara a estimular la reflexi&oacute; sobre algun tema, per 
-    permetre que la classe decideixi cap on pot anar un curs o per recollir les 
-    dades d'un acord.</p>
-</UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Enquestes</B></P>
-<UL>
-  <p>El m&ograve;dul d'enquestes proporciona una varietat d'instruments d'investigaci&oacute; 
-    que s'han vist molt &uacute;tils en l'avaluaci&oacute; i en l'estimulaci&oacute; 
-    de l'aprenentatge en entorns telem&agrave;tics. Els professors els poden utilitzar 
-    per recollir dades dels estudiants que ajudaran a con&egrave;ixer millor la 
-    classe i reflectir-se aix&iacute; en la manera d'ensenyar.</p>
-</UL>
-
+<P>Moodle cont&eacute; un ventall de m&ograve;duls d'activitat que es poden utilitzar per bastir qualsevol tipus de curs.</P>
 
