--- a/lang/ca/help/picture.html
+++ b/lang/ca/help/picture.html
@@ -1,32 +1,25 @@
+<P ALIGN=CENTER><B>Penjar una imatge</B></P>
 
-<P ALIGN=CENTER><B>C&agrave;rrega d'imatges</B></P>
+<P>Podeu penjar al servidor una imatge que tingueu al vostre ordinador que servir&agrave; per representar-vos en diferents llocs.</P>
 
-<P>Podeu carregar una imatge del vostre ordinador al servidor que servir&agrave; 
-  per representar-vos a diferents llocs.
-<P>Per aix&ograve; les millors imatges s&oacute;n les de primers plans de la vostra 
-  cara tot i que podeu usar la imatge que m&eacute;s us agradi.
-<P>L'arxiu d'imatge ha d'estar en format JPG o PNG, &eacute;s a dir, el nom ha 
-  d'acabar en .jpg o .png
-<P>Podeu aconseguir aquest arxiu d'imatge per qualsevol d'aquests m&egrave;todes:
+<P>Per aquesta ra&oacute;, tot i que podeu utilitzar la imatge que vulgueu, la millor idea &eacute;s posar un primer pla de la vostra cara.</P>
+
+<P>La imatge ha d'estar en format JPG o PNG (normalment el nom del fitxer ha d'acabar en .jpg o .png).</P>
+
+<P>Podeu obtenir aquest fitxer mitjan&ccedil;ant qualsevol dels m&egrave;todes seg&uuml;ents:</P>
+
 <OL>
-  <LI>Fent una foto amb una c&agrave;maradigital que la majoria de casos ja passen 
-    al vostre ordinador en el format correcte.
-  <LI>Podeu escanejar una fotografia que tingueu en suport paper. Assegureu-vos 
-    que la deseu com JPG o PNG. 
-  <LI>Si teniu fusta d'artista podeu dibuixar-vos usant una programa de dibuix.
-  <LI>Finalment podeu &quot;robar&quot; alguna imatge de la web. <A TARGET=google HREF="http://images.google.com/">http://images.google.com</A> 
-    &eacute;s un magn&iacute;fic lloc on cercar imatges. Un cop en tingueu una 
-    feu clic amb el bot&oacute; dret del ratol&iacute; i escolliu &quot;Desa imatge 
-    com...&quot; del men&uacute; contextual que us apareixer&agrave;.
+  <LI>Si feu servir una c&agrave;maradigital, molt probablement les fotos es transferiran al vostre ordinador en el format correcte.
+  <LI>Podeu escanejar una fotografia que tingueu en paper. Assegureu-vos que la deseu en format JPG o PNG. 
+  <LI>Si sou artistes, podeu fer-vos un autoretrat amb una programa de dibuix.
+  <LI>Finalment, podeu &quot;robar&quot; imatges del web. <A TARGET=google HREF="http://images.google.com/">http://images.google.com</A> &eacute;s un magn&iacute;fic lloc on cercar imatges. Un cop en trobeu una podeu desar-la al vostre ordinador.
 </OL>
 
-<P>Per carregar la imatge feu clic al bot&oacute; &quot;Navega&quot; d'aquesta 
-  p&agrave;gina i seleccioneu la imatge del vostre disc dur.
-<P>NOTA: Assegureu-vos que l'arxiu no supera la mida m&agrave;xima o no es podr&agrave; 
-  carregar.
-<P>En acabat cliqueu al bot&oacute; &quot;Actualitzar perfil&quot; del capdavall 
-  de la p&agrave;gina i l'arxiu d'imatge quedar&agrave; retallat i deixat a una 
-  mida de 100x100 pixels. 
-<P>Quan torneu a la p&agrave;gina del vostre perfil &eacute;s possible que no 
-  hagi canviat la imatge. en aquest cas feu servir el bot&oacute; &quot;Actualitza&quot; 
+<P>Per penjar la imatge feu clic al bot&oacute; &quot;Navega&quot; d'aquesta p&agrave;gina i seleccioneu la imatge al vostre disc dur.
+
+<P>NOTA: assegureu-vos que l'arxiu no supera la mida m&agrave;xima indicada o no es podr&agrave; penjar.
+
+<P>En acabat feu clic al bot&oacute; &quot;Actualitza perfil&quot; al capdavall p&agrave;gina i la imatge es retallar&agrave; i es reduir&agrave; a una mida de 100x100 p&iacute;xels. 
+
+<P>Quan torneu a visualitzar el vostre perfil &eacute;s possible que no hagi canviat la imatge. En aquest cas feu servir el comandament &quot;Actualitza&quot; o &quot;Reload&quot; del navegador.
   del vostre programa navegador.
