--- a/lang/ca/help/scales.html
+++ b/lang/ca/help/scales.html
@@ -1,20 +1,16 @@
-
 <p align="center"><b>Escales</b></p>
 
-<p>El professorat pot crear noves escales personalitzades per usar-les en un curs 
-  en qualsevol activitat amb notes o qualificacions.</p>
+<p>Els professors poden crear noves escales personalitzades per usar-les en un curs en qualsevol activitat que es pugui qualificar.</p>
 
-<p>El nom de l'escala hauria de ser una frase que la identifiqu&eacute;s clarament: 
-  apareixer&agrave; a les llistes de selecci&oacute; d'escales i als botons d'ajuda 
-  sensitiva de context.</p>
-<p>La pr&ograve;pia escala es defineix com una llista ordenada de valors que van 
-  des dels negatius als positius i separats per comes. Per exemple: </p>
+<p>El nom de l'escala ha de ser una frase que la identifiqu&eacute;s clarament: apareixer&agrave; a les llistes de selecci&oacute; d'escales i als botons d'ajuda contextual.</p>
+
+<p>L'escala es defineix com una llista ordenada de valors, que van 
+  des dels negatius als positius, separats per comes. Per exemple: </p>
+  
 <blockquote><i>Decebedor, No prou bo, Correcte, Bo, Molt bo, Excel&middot;lent! 
   </i></blockquote>
-<p>Les escales tamb&eacute; haurien d'incloure una bona descripci&oacute; del 
-  que signifiquen i com han d'usar-se. Aquesta descripci&oacute; podria apar&egrave;ixer 
-  a les p&agrave;gines d'ajuda per professors i estudiants.</p>
-<p>Finalment, hi hauria d'haver una o m&eacute;s escales &quot;est&agrave;ndard&quot; 
-  definides al lloc web per l'administrador del sistema i accessibles des de tots 
-  els cursos.</p>
+  
+<p>Les escales tamb&eacute; han d'incloure una bona descripci&oacute; del que signifiquen i com han d'usar-se. Aquesta descripci&oacute; apareix a les p&agrave;gines d'ajuda per a professors i estudiants.</p>
+
+<p>Finalment, pot haver-hi una o m&eacute;s escales "est&agrave;ndard" definides per l'administrador per a tot el lloc web. Aquestes estaran disponibles per a tots els cursos.</p>
 
