--- a/lang/ca/help/summaries.html
+++ b/lang/ca/help/summaries.html
@@ -1,11 +1,8 @@
 
-<p align=center><b>Resums de Tema/Setmana</b></p>
+<p align=center><b>Resums del tema/setmana</b></p>
 
-<p>La idea d'un resum del Tema &eacute;s un text molt curt per preparar als estudiants 
-  per a les activitats d'aquest tema (o setmana).</p>
-<p>Cada resum hauria de ser molt curt de forma que la p&agrave;gina inicials del 
-  curs no fos massa llarga.</p>
-<p>Si trobeu que encara us resten coses a dir m&eacute;s enll&agrave; d'una frase 
-  o dues val m&eacute;s que considereu el fet alternatiu d'afegir un recurs al 
-  tema (per exemple: la primera activitat podria ser una p&agrave;gina anomenada 
-  <b>Sobre aquest tema</b>).</p>
+<p>La idea d'un resum del tema &eacute;s un text molt breu per preparar als estudiants per a les activitats d'aquest tema (o setmana).</p>
+
+<p>El resum hauria de ser molt breu de manera que la p&agrave;gina principal del curs no es faci massa llarga.</p>
+
+<p>Si trobeu que no teniu prou amb una frase o dues, considereu l'alternativa d'afegir un recurs al tema (per exemple: la primera activitat podria ser una p&agrave;gina titulada <b>Sobre aquest tema</b>).</p>
