--- a/lang/ca/help/surveys.html
+++ b/lang/ca/help/surveys.html
@@ -1,19 +1,12 @@
-
 <P ALIGN=CENTER><B>Enquestes disponibles</B></P>
 
-<P>Ara per ara Moodle nom&eacute;s ofereix determinats tipus d'enquestes. En futures 
-  versions podreu crear les vostres pr&ograve;pies enquestes.</P>
+<P>Ara per ara Moodle nom&eacute;s ofereix determinats tipus d'enquestes. En versions futures podreu crear tipus nous.</P>
 
-<P>Les enquestes disponibles s'han triat per ser les m&eacute;s utils per avaluar 
-  entorns virtuals d'ensenyament basats en la pedagogia constructivista. Tamb&eacute; 
-  s&oacute;n &uacute;tils per identificar determinades tend&egrave;ncies que es 
-  donen entre els estudiants (Per veure un article sobre el tema amb una an&agrave;lisi 
-  detallada aneu a <a target=paper href="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</a></P>
+<P>Les enquestes disponibles s'han triat per ser les m&eacute;s particularment utils en l'avaluaci&oacute; d'entorns virtuals d'ensenyament basats en una pedagogia constructivista. S&oacute;n &uacute;tils per identificar determinades tend&egrave;ncies que poden donar-se entre els estudiants (Per veure un article sobre el tema amb una an&agrave;lisi detallada aneu a <a target=paper href="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</a>)</P>
 <HR>
-<P><B>COLLES - Constructivist On-Line Learning Environment Survey (Enquesta sobre 
-  un entorn virtual d'aprenentatge constructivista)</B></P>
+<P><B>COLLES - Constructivist On-Line Learning Environment Survey (Enquesta sobre un entorn virtual d'aprenentatge constructivista)</B></P>
 <UL>
-  <p>The COLLES comprises an economical 24 statements grouped into six scales, 
+  <p>COLLES comprises an economical 24 statements grouped into six scales, 
     each of which helps us address a key question about the quality of the on-line 
     learning environment: </p>
 
@@ -89,11 +82,11 @@ COLLES and the authors of it at:
 
 <P>Studies have shown that these two learning styles are independent of each other (Galotti et al., 1999; Galotti et al., 2001). Additionally, they are only a reflection of learning attitudes, not learning capacities or intellectual power. 
 
-<P><I>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., & Tarule, J. M. (1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New York: Basic Books, Inc. </I></P>
+<P><I>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., &amp; Tarule, J. M. (1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New York: Basic Books, Inc. </I></P>
 
-<P><I>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., & Mansfield, A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards Thinking and Learning Survey (ATTLS). Sex Roles, 40(9/10), 745-766.</I></P>
+<P><I>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., &amp; Mansfield, A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards Thinking and Learning Survey (ATTLS). Sex Roles, 40(9/10), 745-766.</I></P>
 
-<P><I>Galotti, K. M., Reimer, R. L., & Drebus, D. W. (2001). Ways of knowing as learning styles: Learning MAGIC with a partner. Sex Roles, 44(7/8), 419-436.</I></P>
+<P><I>Galotti, K. M., Reimer, R. L., &amp; Drebus, D. W. (2001). Ways of knowing as learning styles: Learning MAGIC with a partner. Sex Roles, 44(7/8), 419-436.</I></P>
 
 
 </UL>
