--- a/lang/ca/help/teachers.html
+++ b/lang/ca/help/teachers.html
@@ -1,19 +1,9 @@
-
 <P ALIGN=CENTER><B>Professors</B></P>
 
-<P>Aquesta p&agrave;gina mostra la llista de persones a las que l'administrador 
-  del sistema ha designat com &quot;professors&quot;.
-<P>Podeu usar aquest formulari per assignar a cada persona un &quot;paper&quot; 
-  tal com &quot;professor&quot;, &quot;tutor&quot;, &quot;ajudant&quot;, etc. 
-  Apareixeran a la llista del lloc web del curs aix&iacute; com a la llista de 
-  participants al curs. Si deixeu buit el &quot;paper&quot; aleshores s'usar&agrave; 
-  per defecte la paraula que heu escollit a la p&agrave;gina de configuraci&oacute; 
-  del curs.
-<P>Tamb&eacute; podeu ordenar la llista posant, per exemple, el nom del professor 
-  principal al cap de munt. Nom&eacute;s cal que dels men&uacute;s de la columna 
-  &quot;Ordre&quot; seleccioneu &quot;n&uacute;meros&quot;. Veureu la nova ordenaci&oacute; 
-  despr&eacute;s de pr&eacute;mer &quot;Desa canvis&quot;.
-<P><B>NOTA:</B> Un cas especial succeeix quan per un professor seleccioneu &quot;Amagat&quot;. 
-  No es mostrar&agrave; el nom del professor a les llistes del curs o de participants. 
-  Restar&agrave; &quot;amagat&quot; pels estudiants a no ser que envi&iuml; missatges 
-  als f&ograve;rums, etc.
+<P>Aquesta p&agrave;gina mostra la llista de persones designades com a "professors" del curs per l'administrador del sistema.
+
+<P>Podeu utilitzar aquest formulari per assignar a cada persona un "rol" (t&iacute;tol), per exemple "professor", "tutor", "ajudant", etc. Aquests t&iacute;tols apareixen a la llista de cursos del lloc i a la llista de participants del curs. Si deixeu el rol buit s'utilitza el mot per defecte definit a la p&agrave;gina de Par&agrave;metres del curs.
+
+<P>Tamb&eacute; podeu ordenar la llista (per posar davant el professor principal, per exemple). Nom&eacute;s cal que seleccioneu els n&uacute;meros de la la columna &quot;Ordre&quot;. Despr&eacute;s de desar els canvis veureu el nou ordre.
+
+<P><B>NOTA:</B> Un cas especial &eacute;s quan seleccioneu "Oculta". En aquest cas, el nom del professor NO ES MOSTRARA a la llistes de cursos o la llista de participants. Restar&agrave; &quot;ocult&quot; per als estudiants (si no &eacute;s que envia missatges als f&ograve;rums, etc.).
