--- a/lang/ca/help/questions.html
+++ b/lang/ca/help/questions.html
@@ -1,12 +1,12 @@
 <h2>Preguntes</h2>
 
-<p>Una bona manera d'ajudar la gent a pensar sobre un tema &eacute;s fer-los una pregunta sobre aquest tema. Una bona pregunta realment ens pot ajudar a reunir la informaci&oacute;, avaluar les nostres idees i formar idees noves.</p>
+<p>Una bona manera d'ajudar els altres a pensar sobre un tema &eacute;s fer-los una pregunta sobre aquest tema. Una bona pregunta realment ens pot ajudar a aplegar la informaci&oacute;, avaluar les nostres idees i formar idees noves.</p>
 
-<p>Fer preguntes amb la intenci&oacute; espec&iacute;fica d'ajudar els altres a aprendre es coneix com <i>fer preguntes socr&agrave;tiques</i>, en honor del vell fil&ograve;sof grec.</p>
+<p>Fer preguntes amb la intenci&oacute; espec&iacute;fica d'ajudar els altres a aprendre es coneix com <i>fer preguntes socr&agrave;tiques</i>, en honor del fil&ograve;sof de l'Antiga Gr&egrave;cia.</p>
 
 <p>Fer preguntes socr&agrave;tiques t'exigeix escoltar molt atentament l'altra persona per mirar d'expressar-te d'una manera &uacute;til, constructiva i si hi ha sort sense entrar en conflicte.</p>
 
-<p>Ac&iacute; davall teniu alguns exemples d'aquest tipus de preguntes:</p>
+<p>Heus ac&iacute; alguns exemples d'aquest tipus de preguntes:</p>
 
 <H3>Preguntes de clarificaci&oacute;</H3>
 
@@ -17,7 +17,7 @@
 <LI>Pots expressar-ho d'una altra forma?</LI>
 <li>Deixa'm veure si t'he ent&egrave;s; vols dir _____ o _____?</li>
 <li>Quina relaci&oacute; t&eacute; a&ccedil;&ograve; amb el nostre problema/discussi&oacute;/idea?</li>
-<LI>Marta, pots resumir amb paraules teues el que ha dit Pau? ... Pau, &eacute;s aix&ograve; el que volies dir?</LI>
+<LI>Marta, pots resumir amb paraules teves el que ha dit Pau? ... Pau, &eacute;s aix&ograve; el que volies dir?</LI>
 <LI>Pots donar-me un exemple?</LI>
 <li>Seria _____ un bon exemple d'aix&ograve;?</li>
 </UL>
@@ -26,9 +26,9 @@
   <li>Qu&egrave; est&agrave;s pressuposant?</li>
   <li>Qu&egrave; est&agrave; pressuposant Laura?</li>
   <li>Qu&egrave; podr&iacute;em assumir en lloc d'aix&ograve;?</li>
-  <li>Pareix que estigues assumint que _____. T'he ent&egrave;s correctament?</li>
+  <li>Sembla que est&agrave;s assumint que _____. T'he ent&egrave;s correctament?</li>
   <li>Tot el teu raonament dep&eacute;n de la idea que _____. Per qu&egrave; has basat el teu raonament en _____ en lloc de _____?</li>
-  <li>Pareix que estigues pressuposant _____. Com justifiques donar aix&ograve; per segur?</li>
+  <li>Sembla que est&agrave;s pressuposant _____. Com justifiques donar aix&ograve; per segur?</li>
   <li>Sempre &eacute;s aix&iacute;? Per qu&egrave; penses que podem assumir aix&ograve; en aquest cas?</li>
   <li>Per qu&egrave; haur&iacute;em de pressuposar aix&ograve;?</li>
 </ul>
@@ -38,8 +38,8 @@
   <li>Com s'aplica aix&ograve; a aquest cas?</li>
   <li>Hi ha alguna ra&oacute; per a dubtar d'aquesta prova?</li>
   <li>Qui est&agrave; en situaci&oacute; de saber si aix&ograve; &eacute;s veritat?</li>
-  <li>Qu&egrave; diries a alg&uacute; que diguera que ____?</li>
-  <li>Alg&uacute; m&eacute;s pot donar dades que recolzen aquest punt de vista?</li>
+  <li>Qu&egrave; diries a alg&uacute; que digu&eacute;s que ____?</li>
+  <li>Alg&uacute; m&eacute;s pot donar dades que recolzin aquest punt de vista?</li>
   <li>Per mitj&agrave; de quin raonament vas arribar a aquesta conclusi&oacute;?</li>
   <li>Com podr&iacute;em descobrir si aix&ograve; &eacute;s veritat?</li>
 </ul>
@@ -47,12 +47,12 @@
 <ul>
   <li>Qu&egrave; estas implicant amb aix&ograve;?</li>
   <li>Quan dius que _____, est&agrave;s implicant que _____?</li>
-  <li>Per&ograve;, si f&oacute;ra aix&iacute;, qu&egrave; m&eacute;s s'esdevendria en conseq&uuml;&egrave;ncia? Per qu&egrave;?</li>
+  <li>Per&ograve;, si fos aix&iacute;, qu&egrave; m&eacute;s s'esdevendria en conseq&uuml;&egrave;ncia? Per qu&egrave;?</li>
   <li>Quin efecte tindria aix&ograve;?</li>
   <li>Aix&ograve; s'esdevindria necess&agrave;riament o nom&eacute;s possiblement/probablement?</li>
   <li>Hi ha alguna alternativa?</li>
   <li>Si s'esdevenen _____ i _____, qu&egrave; m&eacute;s podria ser tamb&eacute; veritat?</li>
-  <li>Si diem que ____ &eacute;s &egrave;tic, qu&egrave; tal _____? </li>
+  <li>Si diem que ____ &eacute;s &egrave;tic, qu&egrave; us sembla _____? </li>
 </ul>
 <h3>Preguntes que sondegen implicacions i conseq&uuml;&egrave;ncies</h3>
 <ul>
