--- a/lang/ca/help/richtext.html
+++ b/lang/ca/help/richtext.html
@@ -1,4 +1,3 @@
-
 <P ALIGN=CENTER><B>Sobre l'editor de text enriquit HTML</B></P>
 
 <P>Disponibilitat: <B> 
@@ -15,46 +14,36 @@
   </B></P>
 
 <P>L'editor de text enriquit HTML ens proporciona una interf&iacute;cie de processador 
-  de textos incrustada a la p&agrave;gina web per permetre-us editar text d'una 
-  forma intu&iuml;tiva, i el resultat &eacute;s codi HTML. 
+  de textos incrustada en una p&agrave;gina web per permetre-us editar text d'una 
+  forma intu&iuml;tiva, i el resultat &eacute;s codi HTML normal.
+  
 <P>A m&eacute;s de formatar text aquest editor presenta una s&egrave;rie de caracter&iacute;stiques 
-  extra que us poden ser molt &uacute;tils.
+  extra que podeu trobar &uacute;tils.
+  
 <P><B>Copiar text des d'altres aplicacions</B></P>
 <UL>
-  <p>Podeu copiar i enganxar directament text enriquit des d'altres aplicacions 
-    Windows, com ara Microsoft Word, a aquest editor i es conservar&agrave; el 
-    format. Nom&eacute;s cal que useu els men&uacute;s habituals de copiar i enganxar 
-    del vostre navegador o b&eacute; Control-C i Control-V.</p>
+  <p>Podeu copiar i enganxar-hi directament text enriquit des d'altres aplicacions Windows, com ara Microsoft Word, i es conservar&agrave; el formatatge. Nom&eacute;s cal que useu els men&uacute;s habituals de copiar i enganxar del vostre navegador (o les tecles equivalents control-C i control-V).</p>
 </UL>
 
 <P><B>Inserir imatges <img border="0" hspace="10" src="lib/rte/images/icon_ins_image.gif"></B></P>
 <UL>
-  <P>Si teniu imatges publicades en un lloc web accessible via Internet les podeu 
-    incloure als vostres textos tot utilitzant el bot&oacute; &quot;Insereix imatge&quot;
+  <P>Si teniu imatges publicades en un lloc web i accessibles per mitj&agrave; d'un URL les podeu incloure en els vostres textos per mitj&agrave; del bot&oacute; "Insereix imatge".
 </UL>
 
 <P><B>Inserir taules<img border="0" hspace="10" src="lib/rte/images/icon_ins_table.gif"></B></P>
 <UL>
-  <P>Per afegir graelles als textos podeu usar el bot&oacute; &quot;Insereix taules&quot; 
+  <P>Podeu formatar els textos amb taules utilitzan el bot&oacute; "Insereix taules" 
     de la barra de men&uacute;s.
 </UL>
 
 <P><B>Inserir enlla&ccedil;os<img border="0" hspace="10" src="lib/rte/images/icon_ins_link.gif"></B></P>
 <UL>
-  <p>Per crear un nou enlla&ccedil; primer cal escriure el text on voleu que hi 
-    hagi l'&iexcl;enlla&ccedil;. En acabat seleccioneu-lo i cliqueu el bot&oacute; 
-    d'enlla&ccedil; de la barra de men&uacute;s. Escriviu l'adre&ccedil;a (URL) 
-    a la que voleu enlla&ccedil;ar i Accepteu. Res m&eacute;s senzill.</p>
+  <p>Per crear un nou enlla&ccedil; primer cal escriure el text on voleu que hi hagi l'&iexcl;enlla&ccedil;. En acabat seleccioneu-lo i feu clic al bot&oacute; d'enlla&ccedil; de la barra de men&uacute;s. Escriviu l'URL que voleu enlla&ccedil;ar i ja ho teniu.</p>
 </UL>
-
 
 <P><B>Inserir emoticones<img border="0" hspace="10" src="pix/s/smiley.gif" width="15" height="15"></B></P>
 <UL>
-  <p>Per incloure emoticones als vostres textos feu clic al bot&oacute; amb l'emoticona 
-    de la barra de men&uacute;s. Una finestreta emergent us permetr&agrave; escollir 
-    entre les diferents emoticones. Altrament podeu escriure el codi corresponent 
-    al vostre text i es convertir&agrave; autom&agrave;ticament en emoticona quan, 
-    m&eacute;s endavant, es mostri el vostre text.</p>
+  <p>Per incrustar emoticones en els textos feu clic al bot&oacute; de l'emoticona de la barra de men&uacute;s. Un di&agrave;leg us permetr&agrave; triar les diferents emoticones. Tamb&eacute; podeu escriure directament el codi corresponent a l'emoticona i despr&eacute;s quan es mostri el text es convertir&agrave; autom&agrave;ticament en l'emoticona.</p>
   <p>&nbsp;</p>
   <table border="1" align="center">
     <tr valign="top"> 
@@ -67,7 +56,7 @@
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-D')"><img alt border="0" hspace="10" src="pix/s/biggrin.gif" width="15" height="15"></a></td>
-            <td>riallada</td>
+            <td>rialla</td>
             <td><font face="courier">:-D</font></td>
           </tr>
           <tr> 
@@ -87,7 +76,7 @@
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-P')"><img alt border="0" hspace="10" src="pix/s/tongueout.gif" width="15" height="15"></a></td>
-            <td>treure la llengua</td>
+            <td>burleta</td>
             <td><font face="courier">:-P</font></td>
           </tr>
           <tr> 
@@ -131,7 +120,7 @@
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-X')"><img alt border="0" hspace="10" src="pix/s/kiss.gif" width="15" height="15"></a></td>
-            <td>petons</td>
+            <td>pet&oacute;</td>
             <td><font face="courier">:-X</font></td>
           </tr>
           <tr> 
@@ -156,7 +145,7 @@
           </tr>
           <tr> 
             <td><a href="javascript:inserttext('|-.')"><img alt border="0" hspace="10" src="pix/s/sleepy.gif" width="15" height="15"></a></td>
-            <td>adormit</td>
+            <td>somnolent</td>
             <td><font face="courier">|-.</font></td>
           </tr>
           <tr> 
