--- a/lang/ca/help/textformat.html
+++ b/lang/ca/help/textformat.html
@@ -1,67 +1,56 @@
-
 <P ALIGN=CENTER><B>Formatar text</B></P>
 
-<P>Quan escriviu text a Moodle podeu escollir entre diferents tipus de format 
-  depenent de les vostres habilitats i del tipus de navegador que useu. 
-<P><B>Normalment si deixeu les opcions als valors per defecte us sortir&agrave; el 
-  text tal com desitgeu</B>.
+<P>Quan escriviu en Moodle podeu triar diferents formats per processar el text segons els vostres coneixements t&egrave;cnics i el tipus de navegador que utilitzeu.
+ 
+<P><B>Normalment si deixeu aquest par&agrave;metre en el valor per defecte les coses funcionaran tal com espereu.</B>.
 
-<P><B>1. Autoformat</B></P>
+<P><B>1. Autoformat Moodle</B></P>
 
 <UL>
-  <p>Aquest &eacute;s el millor format quan feu servir els formularis web per 
-    entrar dades en lloc de l'editor en text enriquit HTML. Nom&eacute;s cal que 
-    escriviu normalment com si estigu&eacute;ssiu enviant un correu.</p>
-  <p>Quan deseu el text Moodle formatar&agrave; autom&agrave;ticament el text 
-    per v&oacute;s.</p>
-  <p>Per exemple, les URL com ara <a href="http://yahoo.com/">http://yahoo.com</a> 
-    o <a href="http://www.yahoo.com/">www.yahoo.com</a> es convertiran en enlla&ccedil;os.</p>
-  <p>Es mantindran els salts de l&iacute;nia i les l&iacute;nies en blanc serviran 
-    per comen&ccedil;ar un nou par&agrave;graf.</p>
-  <p>Les emoticones com ara :-) es convertiran autom&agrave;ticament en llurs 
+  <p>Aquest format &eacute;s millor quan utilitzeu formularis web normals per escriure (en lloc de l'editor de text enriquit HTML). Nom&eacute;s cal que escriviu normalment com si estigu&eacute;ssiu enviant un correu.</p>
+  <p>Quan deseu el text Moodle far&agrave; unes quantes coses per formatar-lo autom&agrave;ticament.</p>
+  <p>Per exemple, els URL com ara <a href="http://www.google.com/">http://www.google.com</a> 
+    o <a href="http://moodle.org/">http://moodle.org</a> es convertiran en enlla&ccedil;os.</p>
+  <p>Els salts de l&iacute;nia es mantindran i les l&iacute;nies en blanc serviran per comen&ccedil;ar un nou par&agrave;graf.</p>
+  <p>Les emoticones com ara :-) es convertiran autom&agrave;ticament en els seus 
     equivalents gr&agrave;fics.</p>
-  Fins i tot podeu introduir codi HTML, si aix&iacute; ho desitgeu, i es mantindr&agrave;. 
+  Fins i tot podeu introduir codi HTML, si voleu, i es mantindr&agrave;. 
   <P>&nbsp; 
-  <p align=right><a href="help.php?file=text.html">Més informació sobre l'autoformat 
-    de Moodle</a></p>
+  <p align=right><a href="help.php?file=text.html">M&eacute;s informaci&oacute; sobre l'autoformatatge de Moodle</a></p>
 </UL>
 
 
 <P><B>2. Format HTML </B></P>
 
 <UL>
-  <p>Aquest format pressuposa que el text &eacute;s tot codi HTML. Si esteu usant 
-    un editor d'HTML per editar el text aquest &eacute;s el format per defecte 
-    i tots els comandaments de la barra d'eines produiran codi HTML per v&oacute;s.</p>
-  <p>Encara que no useu l'editor en text enriquit HTML podeu utilitzar codi HTML 
+  <p>Aquest format pressuposa que el text &eacute;s pur HTML. Si esteu utilitzant l'editor d'HTML per editar el text aquest &eacute;s el format per defecte; tots els comandaments de la barra d'eines produeixen codi HTML per v&oacute;s.</p>
+
+  <p>Encara que no utilitzeu l'editor de text enriquit HTML podeu usar codi HTML 
     al text i es mostrar&agrave; exactament com voleu.</p>
-  <p>A difer&egrave;ncia de l'autoformat aqu&iacute; no hi ha formatatge autom&agrave;tic.</p>
+    
+  <p>A difer&egrave;ncia de l'Autoformat Moodle aqu&iacute; no hi ha formatatge autom&agrave;tic.</p>
   <P ALIGN=RIGHT> 
     <? helpbutton("html", get_string("helphtml")) ?>
-    M&eacute;s informaci&oacute; sobre HTML</P>
+    M&eacute;s informaci&oacute; sobre HTML en Moodle</P>
   <P ALIGN=RIGHT> 
     <? helpbutton("richtext", get_string("helprichtext")) ?>
-    M&eacute;s informaci&oacute; sobre l'editor en text enriquit HTML</P>
+    M&eacute;s informaci&oacute; sobre l'editor de text enriquit HTML</P>
+
 </UL>
 
 
-<P><B>3. Format de text pla</B></P>
+<P><B>3. Text</B></P>
 
 <UL>
-  <P>Aquest format &eacute;s &uacute;til quan necessiteu incloure gran quantitat 
-    de codi o d'HTML que voleu que es mostri exactament tal com l'heu escrit. 
-  <p>Tot i aix&ograve; encara tradueix les emoticones i l&iacute;nies noves, per&ograve; 
-    la resta de text no &eacute;s modificat.</p>
+  <P>Aquest format &eacute;s &uacute;til quan necessiteu incloure gran quantitat de codi o d'HTML que voleu que es mostri exactament tal com l'heu escrit. 
+  <p>S'hi tradueixen les emoticones i els salts de l&iacute;nia, per&ograve; a banda d'aix&ograve; no es toca res.</p>
 </UL>
 
 
 <P><B>4. Format de text Wiki </B></P>
 <UL>
-  <p>Aquest format utilitza una manera especials d'escriure text anomenada format 
-    de Wiki</p>
-  <p>Us permet escriure text de manera que encara &eacute;s prou llegible per&ograve; 
-    que ser&agrave; convertit autom&agrave;ticament en text HTML amb encap&ccedil;alaments, 
-    llistes i altres formats complexos.</p>
+  <p>Aquest format utilitza una forma especial d'escriure text coneguda com format Wiki</p>
+  <p>Aquest format permet escriure text de manera que segueix sent bastant llegible, per&ograve; que tamb&eacute; pot transformar-se autom&agrave;ticament en text HTML amb encap&ccedil;alaments, llistes i altres formatatges complexos.</p>
   <P ALIGN=RIGHT> 
     <? helpbutton("wiki", get_string("helpwiki")) ?>
     M&eacute;s informaci&oacute; sobre el format Wiki</P>
