--- a/lang/fr/help/lesson/retake.html
+++ b/lang/fr/help/lesson/retake.html
@@ -1,26 +1,31 @@
 <p align="center"><b>Permettre aux &eacute;tudiants de suivre &agrave;
 nouveau la le&ccedil;on</b></p>
 
-<p>Ce param&egrave;tre d&eacute;termine si les &eacute;tudiants
-peuvent suivre la le&ccedil;on une seule fois ou &agrave; plusieurs
-reprises. Il est pr&eacute;f&eacute;rable de permettre aux
-&eacute;tudiants de suivre la le&ccedil;on &agrave; plusieurs reprises
-lorsque le professeur estime que le sujet doit &ecirc;tre approfondi
-et tr&egrave;s bien compris. Dans le cas o&ugrave; la le&ccedil;on
-sert plut&ocirc;t de test, l'&eacute;tudiant ne devrait faire la
+<p>Cette option d&eacute;termine si les &eacute;tudiants peuvent
+suivre la le&ccedil;on une seule fois ou &agrave; plusieurs reprises.
+Il est pr&eacute;f&eacute;rable de permettre aux &eacute;tudiants de
+suivre la le&ccedil;on &agrave; plusieurs reprises lorsque le
+professeur estime que le sujet doit &ecirc;tre approfondi et
+tr&egrave;s bien compris. Dans le cas o&ugrave; la le&ccedil;on sert
+plut&ocirc;t de test, l'&eacute;tudiant ne devrait faire la
 le&ccedil;on qu'une seule fois.</p>
 
-<p>La note retenue dans l'outil <b>Notes</b> est la note maximale
-obtenue lors des diff&eacute;rents essais, dans le cas o&ugrave; la
-le&ccedil;on est faite plusieurs fois. Toutefois, l'outil d'analyse
-des r&eacute;sultats aux questions utilise uniquement les
-r&eacute;ponses de la premi&egrave;re tentative.</p>
+<p>La note retenue dans la page <b>Notes</b> est soit la note
+<b>moyenne</b>, soit la note <b>maximale</b> obtenue lors des
+diff&eacute;rents essais, dans le cas o&ugrave; la le&ccedil;on est
+faite plusieurs fois. Un param&egrave;tre permet de choisir laquelle
+de ces deux options est utilis&eacute;e.</p>
 
-<p>Par d&eacute;faut, ce param&egrave;tre est fix&eacute; &agrave;
+<p>Toutefois, l'outil d'analyse des r&eacute;sultats aux questions
+utilise uniquement les r&eacute;ponses faites lors de la
+premi&egrave;re tentative, et que les autres tentatives des
+&eacute;tudiants sont ignor&eacute;es.</p>
+
+<p>Par d&eacute;faut, cette option est r&eacute;gl&eacute; sur
 <b>Oui</b>, ce qui veut dire que les &eacute;tudiants peuvent suivre
 la le&ccedil;on &agrave; plusieurs reprises. On consid&egrave;re que
 seules des circonstances exceptionnelles devraient mener &agrave;
-fixer cette valeur &agrave; <b>Non</b>.
+r&eacute;gler cette valeur sur <b>Non</b>.
 
 
 
