*** empty log message ***

--- a/lang/ca/help/assignment/assignmenttype.html
+++ b/lang/ca/help/assignment/assignmenttype.html
@@ -1,14 +1,9 @@
-
 <P ALIGN=CENTER><B>Tipus de tasques</B></P>
 
 <P>Hi ha diferents tipus de tasques</P>
 
-<P><B>Activitats Offline </B> - &uacute;til quan la tasca a fer es troba fora 
-  de Moodle. Els estudiants veuen la descripci&oacute; de la tasca per&ograve; 
-  no poden carregar fitxers ni res m&eacute;s. Tanmateix el professorat pot avaluar 
-  als estudiants i aquest podran veure llurs qualificacions.
-<p><b>Penjar un fitxer</b> - aquest tipus de tasca permet a tots els estudiants 
-  penjar un arxiu del tipus que sigui. Podria ser un document del processador 
-  Word, o una imatge, un lloc web comprimit o el que sigui que se'ls demani. El 
-  professorat pot qualificar en l&iacute;nia les tasques lliurades.</p>
-<P>&nbsp;
+<P><B>Activitat fora de l&iacute;nia</B>: &uacute;til quan la tasca es realitza fora de Moodle. Els estudiants poden veure la descripci&oacute; de la tasca, per&ograve; no poden penjar fitxers ni res. Tanmateix els professors poden qualificar els estudiants i els estudiants veuen les seves qualificacions.</P>
+
+<P><B>Penjar un fitxer</B>: aquest tipus de tasca permet a tots els
+estudiants penjar un fitxer de qualsevol tipus. Podria ser un document de processador de textos, una imatge, un lloc web comprimit en format zip, o qualsevol cosa que els demaneu. Els professors poden qualificar en l&iacute;nia
+les tasques trameses.</P>
