--- a/lang/ca/help/assignment/mods.html
+++ b/lang/ca/help/assignment/mods.html
@@ -1,9 +1,5 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Tasques</B></P>
+
 <UL>
-  <p>Les tasques permeten al professorat encomanar una feina als estudiants que 
-    impliqui la preparaci&oacute; de contingut digital, en qualsevol format, i 
-    l'envi&iuml;n tot carregant-lo al servidor. Exemples de tasques podrien ser 
-    assajos, projectes, informes, etc. Aquest m&ograve;dul inclou la possibilitat 
-    de qualificar la feina</p>
+	<P>Les tasques permeten al professorat especificar una feina que requereix que els estudiants preparin un contingut digital (en qualsevol format) i el trametin penjant-lo en el servidor. Exemples de tasques podrien ser assajos, projectes, informes, etc. Aquest m&ograve;dul inclou la possibilitat de qualificar la feina.</P>
 </UL>
