--- a/lang/ca/help/assignment/resubmit.html
+++ b/lang/ca/help/assignment/resubmit.html
@@ -1,12 +1,7 @@
+<P ALIGN=CENTER><B>Tornar a trametre tasques</B></P>
 
-<P ALIGN=CENTER><B>Reenviament de tasques</B></P>
-
-<P>Per defecte els estudiants no poden reenviar tasques un cop el professor les 
-  ha qualificat.</P>
-<P>Si activeu aquesta opci&oacute; aleshores els estudiants podran reenviar les 
-  tasques despr&eacute;s de haver estat qualificades per tal que les reavalueu. 
-  Aix&ograve; pot ser &uacute;til si un professor vol engrescar als estudiants 
-  a fer un treball millor en un proc&eacute;s interactiu.</P>
-<P>&Ograve;bviament aquesta opci&oacute; &eacute;s irrellevant per a les tasques 
-  offline.</P>
+<P>Per defecte els estudiants no poden tornar a trametre les tasques una vegada el professor ja les ha qualificades.</P>
+  
+<P>Si activeu aquesta opci&oacute;, aleshores els estudiants podran tornar a trametre les tasques despr&eacute;s que hagin estat qualificades (per tal que les torneu a qualificar). Aix&ograve; pot ser &uacute;til si el professor vol engrescar els estudiants a fer un treball millor en un proc&eacute;s iteratiu.</P>
+<P>&Ograve;bviament aquesta opci&oacute; &eacute;s irrellevant en les tasques fora de l&iacute;nia.</P>
 
