--- a/lang/ca/help/wiki.html
+++ b/lang/ca/help/wiki.html
@@ -1,23 +1,12 @@
+<p align="center"><b>Ajuda per a escriure les p&agrave;gines en format Wiki</b></p>
 
-<p align="center"><b>Ajuda per l'escriptura a les p&agrave;gines amb format Wiki</b></p>
+<p>Les p&agrave;gines en format Wiki proporcionen la possibilitat de marcar el text amb un formatatge intu&iuml;tiu, f&agrave;cilment llegible, que es transformar&agrave; en XHTML quan es visualitzi. Els principals avantatges s&oacute;n que no necessiteu aprendre HTML per obtenir resultats bastant complexos i que el text que escriviu tindr&agrave; bon <em>aspecte</em> fins i tot <em>abans</em> de transformar-lo. &Eacute;s una alternativa real a desar documents Word com a p&agrave;gines web alhora que mant&eacute; la possibilitat d'editar el recurs en l&iacute;nia.</p>
 
-<p>Les p&agrave;gines en format Wiki proporcionen la possibilitat de marcar el 
-  text pla en un format intu&iuml;tiu f&agrave;cilment llegible que ser&agrave; 
-  convertit en XHTML quan sigui mostrat. Els principals avantatges s&oacute;n 
-  que no necessiteu aprendre el llenguatge HTML per obtenir resultats prou complexes, 
-  i que el text que escriviu es veur&agrave; b&eacute; fins i tot abans de la 
-  conversi&oacute;. &Eacute;s una bona alternativa al fet de desar arxius de Word 
-  com a p&agrave;gines web que, aix&iacute;, mantenen la possibilitat de ser editades 
-  en l&iacute;nia.</p>
-<p>Haureu d'escriure b&agrave;sicament text pla al qual podreu afegir alguns <i>car&agrave;cters 
-  especials</i> per tal de formatar-lo.</p>
+<p>Haureu d'escriure b&agrave;sicament nom&eacute;s text. Hi ha alguns <i>car&agrave;cters especials</i> que podeu inserir per tal d'afegir format.</p>
 
-<h3> Formatar blocs </h3>
+<h3>Formatatge a nivell de bloc</h3>
 
-<p>Els blocs de par&agrave;graf estan separats per una l&iacute;nia en blanc com 
-  a m&iacute;nim. Per afegir-hi format especial escriviu algun dels seg&uuml;ents 
-  car&agrave;cters especials en el primer car&agrave;cter de la primera l&iacute;nia 
-  del bloc seguit per un espai en blanc:</p>
+<p>Els blocs de par&agrave;graf se separen per una l&iacute;nia en blanc com a m&iacute;nim. Per afegir formatatge especial a un par&agrave;graf afegiu un dels car&agrave;cters especials seg&uuml;ents, m&eacute;s un espai en blanc, al comen&ccedil;ament de la primera l&iacute;nia del bloc:</p>
 <table>
   <tr>
     <th>Car&agrave;cter</th>
@@ -27,8 +16,8 @@
     <td>Sense car&agrave;cter</td>
     <td>Par&agrave;graf ordinari</td>
   </tr>
-  <tr><td>&gt;</td>
-    <td>Cometes</td>
+  <tr><td>></td>
+    <td>Citaci&oacute;</td>
   </tr>
   <tr>
     <td>Espai</td>
@@ -38,36 +27,29 @@
     <td>Preformatat <em>i </em>el format Wiki s'ignora</td>
   </tr>
   <tr><td>!#</td>
-    <td>Encap&ccedil;alament - on # &eacute;s un valor de l'1 al 6, el nivell 
-      d'encap&ccedil;alament (1 el m&eacute;s gran)</td>
+    <td>Encap&ccedil;alament - on # &eacute;s 1-6, el nivell d'encap&ccedil;alament (1 el m&eacute;s gran)</td>
   </tr>
   <tr><td>Q.</td>
-    <td>Pregunta - estil informatiu afegit al par&agrave;graf per millorar la 
-      presentaci&oacute; pregunta/resposta dins d'un tema.</td>
+    <td>Pregunta - s'afegeix informaci&oacute; d'estil al par&agrave;graf per millorar la presentaci&oacute; tipus pregunta/resposta (dins del tema).</td>
   </tr>
   <tr><td>A.</td>
-    <td>Resposta - com l'anterior per&ograve; en resposta</td>
+    <td>Resposta - com l'anterior per&ograve; resposta.</td>
   </tr>
 </table>
 
-<h3>Formatar llistes</h3>
+<h3>Formatatge de llistes</h3>
 
-<p>Podem construir f&agrave;cilment llistes escrivint un car&agrave;cter especial 
-  al principi de cada l&iacute;nia de la llista seguit per un espai en blanc. 
-  El final de la llista el marca una l&iacute;nia en blanc. Les llistes es poden 
-  niar lliurement i un cop niades canviar el tipus de llista. Es poden barrejar 
-  sense problemes llistes de text i de definici&oacute; fins a obtenir l'efecte 
-  desitjat. El car&agrave;cters especials s&oacute;n aquests:</p>
+<p>Podem construir f&agrave;cilment llistes senzilles escrivint un car&agrave;cter especial al principi de cada l&iacute;nia de la llista seguit d'un espai en blanc. El final de la llista el marca una l&iacute;nia en blanc. Es poden imbricar llistes dins de llistes i les llistes imbricades poden ser d'un tipus diferent. Es poden barrejar lliurement llistes de text i de definici&oacute; per aconseguir l'efecte desitjat. Els car&agrave;cters especials s&oacute;n els seg&uuml;ents:</p>
 <table>
   <tr>
     <th>Car&agrave;cter</th>
     <th>Tipus de llista</th>
   </tr>
   <tr><td>*</td>
-    <td>Llista sense ordre (vinyeta de punts)</td>
+    <td>Llista no numerada ordre (llista de pics)</td>
   </tr>
   <tr><td>#</td>
-    <td>Llista ordenada (1,2,3 etc.)</td>
+    <td>Llista numerada (1,2,3 etc.)</td>
   </tr>
   <tr><td>:</td>
     <td>Llista de definicions, definici&oacute;</td>
@@ -77,28 +59,25 @@
   </tr>
 </table>  
 
-<p>Exemple d'escriptura de llistes niuades</p>
+<p>Exemple de llistes imbricades</p>
 <p><pre>
-  * Primera vinyeta
-  * Segona vinyeta
-  ## línia 1 de llista niuada
-  ## línia 2 de llista niuada
-  * Tercera vinyeta
+  * Primer pic
+  * Segon pic
+  ## l&iacute;nia 1 de llista imbricada
+  ## l&iacute;nia 2 de llista imbricada
+  * Tercer pic
 </pre><p></p>
 <p>I aquest &eacute;s el resultat: 
-<ul><li>Primera vinyeta</li>
-  <li>Segona vinyeta</li>
-  <ol><li>línia 1 de llista niuada</li>
-    <li>línia 2 de llista niuada</li></ol>
-  <li>Tercera vinyeta
+<ul><li>Primer pic</li>
+  <li>Segon pic</li>
+  <ol><li>l&iacute;nia 1 de llista imbricada</li>
+    <li>l&iacute;nia 2 de llista imbricada</li></ol>
+  <li>Tercer pic
 </ul><p></p>
 
-<h3>Formatar dins d'una l&iacute;nia</h3>
+<h3>Formatatge dins del text</h3>
 
-<p>Formatar dins d'una l&iacute;nia fa que un tros de l&iacute;nia tingui un estil 
-  particular. Els car&agrave;cters especials que ho fan possible poden apar&egrave;ixer 
-  en qualsevol punt d'una l&iacute;nia, per&ograve; observeu que el format no 
-  pot superar la l&iacute;nia i continuar a la seg&uuml;ent. Els codis s&oacute;n:</p>
+<p>El formatatge dins del text permet marcar part d'una l&iacute;nia amb un estil particular. Els car&agrave;cters especials emprats poden apar&egrave;ixer en qualsevol punt de la l&iacute;nia, per&ograve; observeu que el formatatge no pot ultrapassar la l&iacute;nia i continuar a la seg&uuml;ent. Els codis s&oacute;n:</p>
 <table>
   <tr>
     <th>Exemple</th>
@@ -111,13 +90,13 @@
     <td>Negreta</td>
   </tr>
   <tr><td>/hola tothom/</td><td><em>hola tothom</em></td>
-    <td>&Egrave;mfasi o It&agrave;lica</td>
+    <td>&Egrave;mfasi o cursiva</td>
   </tr>
   <tr><td>+hola tothom+</td><td><ins>hola tothom</ins></td>
     <td>Text inserit</td>
   </tr>
   <tr><td>-hola tothom-</td><td><del>hola tothom</del></td>
-    <td>Tatxat</td>
+    <td>Text esborrat o barrat</td>
   </tr>
   <tr><td>hola ~tothom~</td><td>hola <sub>tothom</sub></td>
     <td>Sub&iacute;ndex</td>
@@ -126,61 +105,76 @@
     <td>Super&iacute;ndex</td>
   </tr>
   <tr><td>"hola tothom"</td><td><q>hola tothom</q></td>
-    <td>Entre cometes</td>
+    <td>Citaci&oacute;</td>
   </tr>
   <tr><td>%hola tothom%</td><td><code>hola tothom</code></td>
-    <td>Codi o Monoespai</td>
+    <td>Codi o Monoespaiat</td>
   </tr>
   <tr><td>@hola tothom@</td><td><cite>hola tothom</cite></td>
-    <td>Cita</td>
+    <td>Refer&egrave;ncia</td>
   </tr>
 </table>  
 
 <h3>Acr&ograve;nims</h3>
 
-<p>L'etiquetatge dels acr&ograve;nims s'aconsegueix tot situant l'acr&ograve;nim 
-  en lletres maj&uacute;scules seguit per la descripci&oacute; entre par&egrave;ntesi. 
-  No hi ha d'haver espai entre l'acr&ograve;nim i el par&egrave;ntesi. Per exemple:</p>
+<p>L'etiquetatge d'acr&ograve;nims s'aconsegueix posant l'acr&ograve;nim en lletres maj&uacute;scules seguit de la descripci&oacute; entre par&egrave;ntesis. No hi ha d'haver cap espai entre l'acr&ograve;nim i el par&egrave;ntesi. Per exemple:</p>
 
 <p>HTML(Hypertext Markup Language) <br />   <acronym title="Hypertext Markup Language">HTML</acronym></p>
 
 <h3>Enlla&ccedil;os</h3>
 
-Es poden fer enlla&ccedil;os dins del text tot escrivint l'adre&ccedil;a sense 
-espais i el text que ser&agrave; mostrat entre par&egrave;ntesis. Exemple: http://www.google.com/(Cerca 
+<p>Es poden col&middot;locar enlla&ccedil;os dins del text tot escrivint l'URL seguida del text que ser&agrave; mostrat entre par&egrave;ntesi (sense cap espai entre l'URL i el par&egrave;ntesi). Exemple: http://www.google.com/(Cerca 
 ara) es convertir&agrave; en <a href="http://www.google.com/">Cerca ara</a>. 
+
 <h3>Enlla&ccedil;os a m&ograve;duls de Moodle</h3>
 
-<p>Si sabeu el n&uacute;mero identificador d'un m&ograve;dul de Moodle (busqueu 
-  ?id=nn al final de l'adre&ccedil;a d'un m&ograve;dul) i el seu nom podeu enlla&ccedil;ar 
-  directament aquest recurs amb aquesta sintaxi:</p>
-NomModul:nn(Text descriptiu) 
-<p>exemples, <em>recursos:36(La meva nova p&agrave;gina)</em> </p>
-<p><em> forum:10(V&eacute;s al f&ograve;rum)</em></p>
+<p>Si sabeu el n&uacute;mero id d'un m&ograve;dul de Moodle (busqueu ?id=nn al final de l'adre&ccedil;a d'un m&ograve;dul) i el nom del m&ograve;dul podeu enlla&ccedil;ar directament el recurs fent servir aquesta sintaxi:</p>
+
+<p>ModuleName:nn(Text descriptiu)</p>
+
+<p>Per exemple, <em>resource:36(La p&agrave;gina nova)</em>; <em>forum:10(V&eacute;s al f&ograve;rum)</em></p>
 
 <h3>Enlla&ccedil;os a imatges de Moodle</h3>
 
-<p>Es poden afegir gr&agrave;fics en una l&iacute;nia d'una p&agrave;gina Wiki. 
-  Nom&eacute;s cal que carregueu el gr&agrave;fic al servidor i anoteu la seva 
-  ruta a l'&agrave;rea de c&agrave;rrega d'arxius. La sintaxi &eacute;s:</p>
+<p>Es poden inserir gr&agrave;fics dins d'una l&iacute;nia d'una p&agrave;gina Wiki. Cal que pengeu el gr&agrave;fic al servidor i que anoteu el seu cam&iacute; dins de l'&agrave;rea de fitxers penjats. La sintaxi &eacute;s:</p>
 
-<p>/<em>..ruta a l'arxiu..</em>(text alternatiu)</p>
+<p>/<em>..cam&iacute; del fitxer..</em>(text alternatiu)</p>
 
-<p>per exemple, /imatges/grafic.jpg(Foto de l'equip)</p>
+<p>Per exemple: /imatges/grafic.jpg(Foto de l'equip)</p>
+
+<h3>Enlla&ccedil;os a fitxers de Moodle</h3>
+
+<p>Igual que els enlla&ccedil;os a imatges, aquesta caracter&iacute;stica habilita enlla&ccedil;os en p&agrave;gines wiki a fitxers pr&egrave;viament penjats. La sintaxi &eacute;s:</p>
+
+<p><b>file:</b><em>..cam&iacute; del fitxer</em>(text de l'enlla&ccedil;)</p>
+
+<p>Per exemple: file:/pdfs/moodle.pdf(Informaci&oacute; sobre Moodle)</p>
 
 <h3>Reformatatge autom&agrave;tic</h3>
 
-<p>Les funcions m&eacute;s comunes es converteixen autom&agrave;ticament en les 
-  seves equivalents en XHTML. Les principals s&oacute;n:</p>
+<p>Moltes funcions habitualment utilitzades es converteixen autom&agrave;ticament en els seus equivalents XHTML. Les principals s&oacute;n les seg&uuml;ents:</p>
 
 <ul>
-  <li>enlla&ccedil;os que comencen per HTTP es converteixen en enlla&ccedil;os 
-    actius
-  <li> ..., (C), (R), (TM),1/4, 1/2, 3/4 es converteixen en el car&agrave;cter 
-    correcte &copy;, &reg;, &#153;, etc.
-  <li> d&iacute;gits x d&iacute;gits es converteixen en el signe multiplicatiu 
-    correcte
-  <li>Una l&iacute;nia que comenci per, com a poc, 4 guions es converteix en una 
-    l&iacute;nia horitzontal.
+  <li>Les adreces HTTP es converteixen en enlla&ccedil;os actius.
+  <li>..., (C), (R), (TM), 1/4, 1/2, 3/4 es converteixen en els car&agrave;cters corresponents.
+  <li>D&iacute;gits x d&iacute;gits es converteix en el signe de multiplicaci&oacute; correcte.
+  <li>Una l&iacute;nia que comenci per 4 guions o m&eacute;s es converteix en un filet horitzontal.
 </ul>  
 
+<h3>Correcci&oacute; ortogr&agrave;fica (experimental)</h3>
+
+<p>El formatador wiki es pot posar en mode de correcci&oacute; ortogr&agrave;fica. Inseriu aquesta l&iacute;nia en un text i es comprovar&agrave; l'ortografia de tot el text que vagi a continuaci&oacute;:
+
+<pre>
+!SPELL:language_code:language_variant
+
+Exemples:
+!SPELL:en:british
+!SPELL:sp
+</pre>
+
+<p>Canvieu "language_code" pel codi d'idioma apropiat (p. e. ca, es, etc.). "language_variant" (despr&eacute;s de dos punts) &eacute;s opcional i serveix per indicar una varietat regional.</p>
+
+<p>Quan es visualitzi el text els mots desconeguts seran ressaltats i podreu veure els suggeriments alternatius posant el cursos damunt de cada mot.</p>
+
+<p><em>NOTA: la correcci&oacute; ortogr&agrave;fica utilitza les biblioteques <strong>pspell</strong>. Aquestes i els diccionaris han d'estar instal&middot;lats al servidor per tal que funcioni el corrector ortogr&agrave;fic. En Windows no es pot usar aquest programari.</em></p>
