--- a/lang/ca/help/assignment/index.html
+++ b/lang/ca/help/assignment/index.html
@@ -2,5 +2,5 @@
 <p>Tasques</p>
 <ul>
   <li><a href="help.php?module=assignment&file=assignmenttype.html">Tipus de tasques</a> 
-  <li><a href="help.php?module=assignment&file=resubmit.html">Reenviament</a> 
+  <li><a href="help.php?module=assignment&file=resubmit.html">Tornar a trametre</a> 
 </ul>
