*** empty log message ***

--- a/lang/ca/help/chat/index.html
+++ b/lang/ca/help/chat/index.html
@@ -1,5 +1,5 @@
+<p>M&ograve;dul de xat</p>
 
-<p>M&ograve;dul de xats</p>
 <ul>
   <li><a href="help.php?module=chat&file=chatting.html">&Uacute;s del xat</a>
 </ul>
