--- a/lang/ca/help/choice/options.html
+++ b/lang/ca/help/choice/options.html
@@ -1,6 +1,5 @@
+<P ALIGN=CENTER><B>Opcions de la q&uuml;esti&oacute;</B></P>
 
-<P ALIGN=CENTER><B>Opcions de les tries</B></P>
+<P>Aqu&iacute; &eacute;s on especifiqueu les opcions que els participants han de triar.
 
-<P>Aqu&iacute; &eacute;s on heu d'especificar les opcions entre les que han de 
-  triar els participants.
-<P>Podeu omplir-ne fins a 6, tot i que en podeu deixar alguna en blanc.
+<P>Podeu emplenar les que vulgueu: en podeu deixar en blanc si no necessiteu les sis.
