--- a/lang/ca/help/chat/mods.html
+++ b/lang/ca/help/chat/mods.html
@@ -1,10 +1,5 @@
-
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/chat/icon.gif">&nbsp;<B>Xats</B></P>
+
 <UL>
-  <p>El m&ograve;dul de xats permet als participants establir discussions s&iacute;ncrones 
-    en temps real a trav&eacute;s de la web. &Eacute;s una forma molt &uacute;til 
-    d'aconseguir un millor coneixement dels altres i del tema sotm&egrave;s a 
-    discussi&oacute;. La manera d'usar una sala de xats &eacute;s bastant diferent 
-    dels f&ograve;rums as&iacute;ncrons. El m&ograve;dul de xats cont&eacute; 
-    algunes caracter&iacute;stiques per gestionar i revisar les discussions realitzades.</p>
+  <p>El m&ograve;dul de xat permet als participants tenir discussions sincr&ograve;niques en temps real a trav&eacute;s del web. &Eacute;s una forma &uacute;til d'aconseguir un millor coneixement dels altres i del tema sotm&egrave;s a discussi&oacute;. La manera d'usar una sala de xat &eacute;s bastant diferent dels f&ograve;rums as&iacute;ncrons. El m&ograve;dul de xat ofereix diverses possibilitats de gesti&oacute; i de revisi&oacute; de les discussions realitzades.</p>
 </UL>
