--- a/lang/ca/help/choice/index.html
+++ b/lang/ca/help/choice/index.html
@@ -1,5 +1,5 @@
 
-<p>Tries</p>
+<p>Q&uuml;esti&oacute;</p>
 <ul>
-  <li><a href="help.php?module=choice&file=options.html">Opcions</a> 
+  <li><a href="help.php?module=choice&amp;file=options.html">Opcions</a> 
 </ul>
