--- a/lang/ca/help/choice/mods.html
+++ b/lang/ca/help/choice/mods.html
@@ -1,9 +1,4 @@
-
-<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Tries</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Q&uuml;esti&oacute;</B></P>
 <UL>
-  <p>Una activitat de tria &eacute;s molt senzilla. El professor planteja una 
-    pregunta i especifica una tria entre m&uacute;ltiples respostes.</p>
-  <p>Pot ser &uacute;til com a enquesta r&agrave;pida per estimular el pensament 
-    sobre un tema, per permetre que la classe voti en una direcci&oacute; del 
-    curs o per recollir el consens en una investigaci&oacute;</p>
+  <p>La q&uuml;esti&oacute; &eacute;s una activitat molt senzilla: el professor planteja una pregunta i especifica una s&egrave;rie de respostes entre les quals es pot triar. Pot ser &uacute;til com a enquesta r&agrave;pida per estimular la reflexi&oacute; sobre un tema, per deixar que la classe voti sobre diferents alternatives del curs, o perqu&egrave; l'estudiant faci constar que est&agrave; d'acord a participar en una recerca.</p>
 </UL>
